# twin_llm

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  install_chrome.sh  pyproject.toml  test_query.py
.devcontainer/: Dockerfile.dev  devcontainer.json  settings.json  themes.jupyterlab-settings
configs/: digital_data_etl_paul_iusztin.yaml  feature_engineering.yaml  training.yaml
llm_engineering/: settings.py
llm_engineering/application/crawlers/: base.py  custom_article.py  dispatcher.py  github.py  linkedin.py  medium.py
llm_engineering/application/dataset/: constants.py  generation.py  output_parsers.py  utils.py
llm_engineering/application/networks/: embeddings.py
llm_engineering/application/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_engineering/application/preprocessing/operations/: __init__.py  chunking.py
llm_engineering/application/utils/: misc.py  split_user_full_name.py
llm_engineering/domain/: chunks.py  cleaned_documents.py  dataset.py  documents.py  embedded_chunks.py  queries.py  types.py
llm_engineering/domain/base/: nosql.py  vector.py
llm_engineering/infrastructure/: inference_pipeline_api.py  opik_utils.py
llm_engineering/infrastructure/db/: mongo.py  qdrant.py
llm_engineering/model/finetuning/: finetune.py  sagemaker.py
pipelines/: __init__.py  digital_data_etl.py  feature_engineering.py  generate_datasets.py  training.py
steps/: __init__.py
steps/etl/: crawl_links.py  get_or_create_user.py
steps/feature_engineering/: __init__.py  clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
steps/generate_datasets/: create_prompts.py  generate_intruction_dataset.py  generate_preference_dataset.py  push_to_huggingface.py  query_feature_store.py
steps/training/: train.py
tools/: run.py
