[tool.poetry]
name = "twin_llm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.13"
zenml = { version = "0.67.0", extras = ["server"] }
pymongo = "^4.6.2"
click = "^8.0.1"
loguru = "^0.7.2"
rich = "^13.7.1"
numpy = "^1.26.4"
poethepoet = "0.29.0"
datasets = "^3.0.1"

# Digital data ETL
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
jmespath = "^1.0.1"
chromedriver-autoinstaller = "^0.6.4"

# Feature engineering
qdrant-client = "^1.8.0"
langchain = "^0.2.11"
sentence-transformers = "^3.0.0"

# RAG
langchain-openai = "^0.1.3"
jinja2 = "^3.1.4"
tiktoken = "^0.7.0"
fake-useragent = "^1.5.1"
langchain-community = "^0.2.11"

# Inference
fastapi = ">=0.100,<=0.110"
uvicorn = "^0.30.6"
opik = "^0.2.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

 
[tool.ruff]
line-length = 120
 
 
[tool.ruff.lint]
select = [
    "E", # pep8
    "F", # flake8 (base)
    "B", # flake8-bugbear
    "SIM", # flake8-simplify -> better ways to code thing
    "I", # flake8-imports: check order and formatting according to pep8
    #"D", # flake8-docstrings
    "T", # flake8-print - check for print statements left in code
    "N", # pep8-naming,
    "ANN", # flake8-annotations
    "PD", # pandas-vet
    "C", #flakeu-comprehensions
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "TD", # flake8-todos
    "TCH", # flake8-type-checking
    "FBT", # flake8-boolean-trap
]  
ignore = ["D104"] # ignore docstring in __init__.py
 
[tool.ruff.lint.pydocstyle]
convention = "google"
 
[tool.ruff.format]
line-ending = "lf"
skip-magic-trailing-comma = true
 
[tool.ruff.lint.isort]
split-on-trailing-comma = false
no-sections = true

[tool.poe.tasks]
test-poe = "echo 'testing poe'"
local-zenml-server-up = "poetry run zenml up"